# how-it-works

./: .gitignore  README.md  compile.sh  pyproject.toml  tox.ini
src/how_it_works/: cli.py  graph.py  obj_info.py  scope.py  scope_manager.py  to_dot.py  to_html.py  to_json.py  tree_tools.py  utils.py  visitor.py
tests/: conftest.py
tests/sample_app/: cli.py  workers.py
tests/test_cyrcular_call/: test_main.py
tests/test_cyrcular_call/src/: main.py
tests/test_duck_import/: test_main.py
tests/test_duck_import/src/m1/: __init__.py
tests/test_many_way_from_import/src/: main.py
tests/test_many_way_from_import/src/m1/: __init__.py  m2.py
tests/test_many_way_import/src/: main.py
tests/test_many_way_import/src/m1/: __init__.py
