[tool.poetry]
name = "how-it-works"
version = "0.1.0"
description = ""
authors = ["Ilya Chistyakov <ilchistyakov@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
how-it-works = "how_it_works.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
pyvis = "^0.3.2"
click = "^8.1.7"
networkx = "^3.1"
pygraphviz = "^1.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
